syntax = "proto3";

package grpcScheduler;

service grpcScheduler {
    rpc createJob(Job) returns(SuccessResponse) {}
    rpc queryJob(JobQuery) returns(JobQueryResponse) {}
}

message Job {
    int32 Frequency  = 1; // in seconds
    string RunnerEndpoint  = 2;
    int32 Expires    = 3;// timestamp for expires
    int32 CreatedOn  = 4; // timestamp the job was created
}

message JobQuery {
    string ID   = 1;
}

message JobQueryResponse {
    int32 EstimatedCompletion = 1; // this will be in seconds.s
    int32 LastCompleted   = 2;    // unix timestamp
    int32 LastRunDuration = 3;     
}

message SuccessResponse {
    bool Success = 1;
}
